vlib/v/checker/tests/implements_generic_err.out
vlib/v/checker/tests/implements_generic_err.vv:12:31: error: missing generic type on IB
   10 | }
   11 | 
   12 | struct Foo1[T] implements IA, IB {
      |                               ~~
   13 |     a int
   14 |     b T
vlib/v/checker/tests/implements_generic_err.vv:17:31: error: unknown generic type Y
   15 | }
   16 | 
   17 | struct Foo2[T] implements IA, IB[Y] {
      |                               ~~
   18 |     a int
   19 |     b T
vlib/v/checker/tests/implements_generic_err.vv:22:31: error: unknown generic type Y
   20 | }
   21 | 
   22 | struct Foo3[T] implements IA, IB[T,Y] {
      |                               ~~
   23 |     a int
   24 |     b T
vlib/v/checker/tests/implements_generic_err.vv:28:2: error: `println` can not print void expressions
   26 | 
   27 | fn (foo Foo1[T]) fa() {
   28 |     println(foo.b)
      |     ~~~~~~~~~~~~~~
   29 | }
   30 |
vlib/v/checker/tests/implements_generic_err.vv:32:2: error: `println` can not print void expressions
   30 | 
   31 | fn (foo Foo2[T]) fa() {
   32 |     println(foo.b)
      |     ~~~~~~~~~~~~~~
   33 | }
   34 |
vlib/v/checker/tests/implements_generic_err.vv:36:2: error: `println` can not print void expressions
   34 | 
   35 | fn (foo Foo3[T]) fa() {
   36 |     println(foo.b)
      |     ~~~~~~~~~~~~~~
   37 | }
